# beige

./: .gitmodules  CMakeLists.txt
assets/shaders/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl
engine/: Beige.cpp  Beige.hpp  CMakeLists.txt
engine/src/: Defines.hpp  Entry.hpp  IGame.hpp
engine/src/core/: App.cpp  App.hpp  AppTypes.hpp  Assertions.hpp  Clock.cpp  Clock.hpp  Event.hpp  Input.cpp  Input.hpp  InputTypes.hpp  Logger.cpp  Logger.hpp
engine/src/math/: Math.hpp  MathConstans.hpp  MathMatrix4x4.cpp  MathMatrix4x4.hpp  MathQuaternion.cpp  MathQuaternion.hpp  MathRandom.cpp  MathRandom.hpp  MathTypes.hpp  MathVector2.cpp  MathVector2.hpp  MathVector3.cpp  MathVector3.hpp  MathVector4.cpp  MathVector4.hpp  MathVertex3D.cpp  MathVertex3D.hpp
engine/src/platform/: Platform.hpp  PlatformTypes.hpp  PlatformWin32.cpp
engine/src/renderer/: IRendererBackend.hpp  RendererFrontend.cpp  RendererFrontend.hpp  RendererTypes.hpp
engine/src/renderer/vulkan/: VulkanBackend.cpp  VulkanBackend.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanDefines.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFence.cpp  VulkanFence.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanTypes.hpp  VulkanUtils.cpp  VulkanUtils.hpp
engine/src/renderer/vulkan/shaders/: VulkanMaterialShader.cpp  VulkanMaterialShader.hpp  VulkanShaderObject.cpp  VulkanShaderObject.hpp
engine/src/resources/: ITexture.hpp
engine/src/systems/: TextureSystem.cpp  TextureSystem.hpp
testbed/: CMakeLists.txt  main.cpp
testbed/src/: Entry.cpp  Game.cpp  Game.hpp
